2. Correct About information. Use “lowercase” SACKERS gothic size: 0.7em; 1.5px letter spacing

--- a/public/scss/rideau.scss
+++ b/public/scss/rideau.scss
@@ -668,9 +668,10 @@ html.rideau {
 	body#about {
 		//
 		p {
-			font-size: 0.8em;
-			text-align: center;
+			font-family: $sackers_font;
+			font-size: 0.7em;
 			letter-spacing: 1.5px;
+			text-align: center;
 		}
 	}
 	
